# bddisasm

./: .gitignore  .readthedocs.yaml  .vsconfig  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile.fuzzing  Makefile  README.md  SECURITY.md  bddisasm.pc.in  bddisasm.sln  bddisasmConfig.cmake  bddisasmConfig.cmake.in  benchmark.sh  libbddisasm.pc.in  prepare_fuzzing_image.sh  project-meta-info.in
.github/workflows/: c-cpp.yml  ci.yml  rust.yml
bddisasm/: Makefile  bddisasm.c  bddisasm.vcproj  bddisasm.vcxproj  bddisasm.vcxproj.filters  bddisasm_crt.c  bdformat.c  bdhelpers.c  bdx86_decoder.c  bdx86_formatter.c  bdx86_helpers.c  bdx86_idbe.c  bdx86_operand.c  crt.c
bddisasm/include/: bddisasm_crt.h  bdx86_mnemonics.h  bdx86_modrm.h  bdx86_operand.h  bdx86_prefixes.h  bdx86_rex2.h  bdx86_table_evex.h  bdx86_table_root.h  bdx86_table_vex.h  bdx86_table_xop.h  bdx86_tabledefs.h  instructions.h  mnemonics.h  nd_crt.h  prefixes.h  table_evex.h  table_root.h  table_vex.h  table_xop.h  tabledefs.h
bddisasm_test/: README.md  conf-x86.json  test_all.py
bddisasm_test/amx/: amx1_64  amx1_64.asm  amx1_64.result
bddisasm_test/avx/: avx2_64  avx2_64.result  avx2gather_64.asm  avx2gather_64.result  avx_64.asm  avx_64.result  avxvnni_64  avxvnni_64.asm  avxvnni_64.result  f16c_64.asm  f16c_64.result  fma4_64  fma4_64.asm  fma4_64.result  fma_64  fma_64.asm  fma_64.result
bddisasm_test/avx512/: avx512bitalg_64  avx512bitalg_64.asm  avx512bitalg_64.result  avx512bw_64  avx512bw_64.asm  avx512cd_64  avx512cd_64.asm  avx512cd_64.result  avx512dq_64  avx512dq_64.asm  avx512dq_64.result  avx512er_64  avx512er_64.asm  avx512er_64.result  avx512f_64  avx512f_64.asm  avx512fma_64  avx512fma_64.asm  avx512fma_64.result  avx512fp16_64  avx512pf_64.asm  avx512pf_64.result  avx512vbmi_64  avx512vbmi_64.asm  avx512vbmi_64.result  avx512vnni_64  avx512vnni_64.asm  avx512vnni_64.result
bddisasm_test/basic/: address_16.result  address_32  address_32.result  address_64  address_64.asm  address_64.result  aes_64  aes_64.asm  aes_64.result  basic1_64  basic1_64.asm  basic1_64.result  basic2_64  basic2_64.asm  basic2_64.result  bmi_64  bmi_64.asm  bmi_64.result  branch_16  branch_16.asm  branch_16.result  branch_32  branch_32.result  branch_64.result  cet_64  cet_64.asm  cet_64.result  enqcmd_64.asm  enqcmd_64.result  fpu_64.asm  fpu_64.result  gfni_64.result  invlpgb_64  invlpgb_64.asm  invlpgb_64.result  misc_16.result  misc_32  misc_32.result  misc_64.asm  misc_64.result  (+32 more)
bddisasm_test/cet/: cet_32  cet_32.asm  cet_32.result  cet_64  cet_64.asm  cet_64.result  dnt_32.asm  dnt_32.result  dnt_64.result
bddisasm_test/fred/: fred_64  fred_64.asm  fred_64.result
bddisasm_test/kl/: kl_64  kl_64.result
bddisasm_test/simd/: 3dnow_64  3dnow_64.asm  3dnow_64.result  mmx_64.asm  mmx_64.result  sse2_64  sse2_64.asm  sse2_64.result  sse3_64  sse3_64.asm  sse3_64.result  sse4_64.result
bddisasm_test/special/: amx_64  amx_64.asm  amx_64.result  avx2gather_1_64.result  avx2gather_1_64_skip  avx2gather_2_64.result  avx2gather_2_64_skip  avx2gather_3_64.result  avx2gather_3_64_skip  avx2gather_3_64_skip.result  cr8_32  cr8_32.result  ignorew_evex_64.result  invalid_32  invalid_32.asm  invalid_32.result  invalid_32_skip  invalid_32_skip.result  invalid_64  invalid_64.asm  invalid_64.result  invalid_64_skip.asm  invalid_64_skip.result  invalid_evex_64_skip  invalid_evex_64_skip.asm  invalid_evex_64_skip.result  long_64  long_64.result  only_32  (+10 more)
bdshemu/: Makefile  bdshemu.c  bdshemu.vcxproj  bdshemu.vcxproj.filters  bdshemu_x86.c
bdshemu_fuzz/: CMakeLists.txt  Makefile  README.md  bdshemu_fuzzer.c  fuzzing_image_entrypoint.sh
bdshemu_fuzz/in-32/: test_32_str01  test_32_str03  test_64_basic04  test_64_basic05  test_64_basic06  test_64_basic09  test_64_branch2  test_64_branch3  test_64_branch4  test_64_div  test_64_flags  test_64_mov  test_64_selfwrite02  test_64_selfwrite03  test_64_string
bdshemu_fuzz/in-64/: test_64_basic01  test_64_basic02  test_64_basic03  test_64_basic04  test_64_basic05  test_64_basic08  test_64_branch1  test_64_branch2  test_64_branch4  test_64_div  test_64_loadrip02  test_64_selfwrite03  test_64_string  test_64_sys01  test_64_sys03
bdshemu_test/: README.md  conf-x86.json  test_all.py
bindings/rsbddisasm/bddisasm/: CHANGELOG.md  Cargo.toml  README.md
bindings/rsbddisasm/bddisasm-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
bindings/rsbddisasm/bddisasm-sys/csrc/: bddisasm  bddisasm_wrapper.h  inc
bindings/rsbddisasm/bddisasm-sys/src/: lib.rs
bindings/rsbddisasm/bddisasm/examples/: emulator.rs
bindings/rsbddisasm/bddisasm/src/: cpu_modes.rs  cpuid.rs  decode_error.rs  decoded_instruction.rs  decoder.rs  fpu_flags.rs  instruction_category.rs  isa_set.rs  lib.rs  mnemonic.rs  operand.rs  rflags.rs  simd_exceptions.rs  tuple.rs
disasmtool/: CMakeLists.txt  disasmtool.c  disasmtool.h  disasmtool.vcxproj  disasmtool.vcxproj.filters  handle_disasm.c  handle_shemu.c
disasmtool_lix/: CMakeLists.txt  Makefile  disasm.hpp  disasmtool.cpp  dumpers.cpp  dumpers.cpp.bak  rapidjson.cpp
docs/: Makefile
inc/: bddisasm.h  bddisasm_status.h  bddisasm_types.h  bddisasm_version.h  bdshemu.h  bdshemu_x86.h  bdx86_api_legacy.h  bdx86_api_mini.h  bdx86_constants.h  bdx86_core.h  bdx86_cpuidflags.h  bdx86_registers.h  constants.h  cpuidflags.h  disasmstatus.h  disasmtypes.h  registers.h  version.h
isagenerator/: CMakeLists.txt  Makefile  README.md  disasmlib.py  generate_tables.py  isagenerator.vcxproj  isagenerator.vcxproj.filters
isagenerator/isg_x86/: __init__.py  attributes.py  common.py  cpu_modes.py  cpuid.py  decorators.py  disasmlib.py  evex_mode.py  evex_tuple.py  exception_type.py  flags_access.py  fpu_access.py  instrux.py  instrux_grouper.py  operand.py  operand_access.py  prefix_map.py  simd_exceptions.py
pybddisasm/: MANIFEST.in  README.md  setup.py
pydis/: README.md  setup.py
rsbddisasm/: README.md
rsbddisasm/bddisasm-sys/: Cargo.toml
rsbddisasm/bddisasm-sys/csrc/: bddisasm  inc
rsbddisasm/bddisasm-sys/src/: lib.rs
tests/: README.md  main.py
(+577 files in other folders)
